# nila-oidc

./: .gitignore  Cargo.toml  README.md  ci-local.sh  package-lock.json
.github/workflows/: ci.yml
examples/: README.md  nila_jwt_proxy.rs  proxy_config.yaml
nila-oidc-op/: Cargo.toml
nila-oidc-op/examples/: nila_jwt_proxy.rs
nila-oidc-op/src/: lib.rs
nila-oidc-op/src/validator/: config.rs
nila-oidc-rp/: Cargo.toml
nila-oidc-rp/examples/: gitlab.rs  google.rs
nila-oidc-rp/src/: claims.rs  discovery.rs  id_token.rs  jwt.rs  lib.rs  registration.rs  types.rs  user_info.rs  verification.rs
nila-oidc-rp/src/core/: crypto.rs  jwk.rs  mod.rs
nila-oidc-rp/tests/: rp_certification_code.rs  rp_certification_dynamic.rs
nila-oidc-rp/tests/rp_common/: mod.rs
src/: client.rs  config.rs  error.rs  generator.rs  lib.rs  model.rs  validator.rs
src/generator/: mod.rs
src/validator/: client.rs  mod.rs
tests/: integration_test.rs
