[package]
name = "nila-oidc"
version = "0.1.0"
edition = "2021"
authors = ["Rajesh Bavan <rajesh.bavan@gmail.com>"]
license = "Apache-2.0"
description = "A robust, modular OpenID Connect (OIDC) and OAuth2 library for the Pingora framework."
repository = "https://github.com/b-rajesh/nila-oidc"
readme = "README.md"
keywords = ["pingora", "oidc", "oauth2", "jwt", "auth"]
categories = ["web-programming", "asynchronous", "api-bindings"]

[dependencies]
# Core
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"                               # Version updated for consistency
tokio = { version = "1", features = ["sync"] }
url = { version = "2.5", features = ["serde"] }

# JWT & JWKS Handling
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
base64-url = "3.0.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# --- Optional Dependencies ---

# For Pingora Integration
pingora-proxy = { version = "0.5.0", optional = true }
pingora-core = { version = "0.5.0", optional = true }

# For Redis Caching
redis = { version = "0.32.0", features = [
    "tokio-comp",
], optional = true } # Version updated for consistency
tracing = "0.1.41"

[features]
# Default feature enables the Pingora integration layer.
default = ["pingora-integration"]

# Enables the code specific to integrating with the Pingora framework.
pingora-integration = ["dep:pingora-proxy", "dep:pingora-core"]

# Enables Redis as a caching backend for JWKS.
redis-cache = ["dep:redis"]

[dev-dependencies]
# Testing Frameworks
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

# For generating test keys and tokens
rsa = "0.9.8"
rand = "0.8.5"
base64 = "0.13.1"
chrono = "0.4.38"
base64-url = "3.0.0"
