[workspace]
members = ["nila-oidc-op"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.86"
authors = ["Rajesh <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/b-rajesh/nila-oidc"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock"] }
thiserror = "1.0"
url = "2.5"
