[package]
name = "nila-oidc"
version = "0.4.0"
edition = "2024"
authors = ["Rajesh Bavan <rajesh.bavan@gmail.com>"]
license = "Apache-2.0"
description = "A robust, modular OpenID Connect (OIDC) and OAuth2 library for the Pingora framework."
repository = "https://github.com/b-rajesh/nila-oidc"
readme = "README.md"
keywords = ["pingora", "oidc", "oauth2", "jwt", "auth"]
categories = ["web-programming", "asynchronous", "api-bindings"]

[dependencies]
# Core
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "signal",
] } # Unified features for both library and examples
url = { version = "2.5", features = ["serde"] }
rsa = { version = "0.9.8", features = [
    "pem",
] } # Correct feature for PEM parsing
sha2 = "0.10" # For JWK thumbprint generation
uuid = { version = "1.8", features = ["v4"] } # For generating jti claim

# JWT & JWKS Handling
jsonwebtoken = { version = "9.3", features = [
    "use_pem",
] } # Enable use_pem feature for RSA key handling
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
bytes = "1.0" # Added for pingora_proxy::Session::write_response_body
base64-url = "3.0.0" # updated for dependabot
base64 = "0.22.1" # Keep here as it's used in src/generator.rs

# Caching
moka = { version = "0.12", features = ["future"] }

# --- Optional Dependencies ---

# For Pingora Integration
pingora-proxy = { git = "https://github.com/cloudflare/pingora", branch = "main", optional = true, package = "pingora-proxy" }
pingora-core = { git = "https://github.com/cloudflare/pingora", branch = "main", optional = true, package = "pingora-core" }
pingora-http = { git = "https://github.com/cloudflare/pingora", branch = "main", optional = true, package = "pingora-http" }

# For Redis Caching
redis = { version = "0.32.2", features = [
    "tokio-comp",
], optional = true } # Version updated for consistency
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
[features]
# Default feature enables the Pingora integration layer.
default = ["pingora-integration"]

# Enables the code specific to integrating with the Pingora framework.
pingora-integration = [
    "dep:pingora-proxy",
    "dep:pingora-core",
    "dep:pingora-http",
]

# Enables Redis as a caching backend for JWKS.
redis-cache = ["dep:redis"]

[dev-dependencies]
# Testing Frameworks (tokio features moved to [dependencies])
wiremock = "0.6.4"
tempfile = "3.10"

# For generating test keys and tokens
rand = "0.9.1"           # Keep rand here as it's only for dev/testing
chrono = "0.4.38"
base64-url = "3.0.0"
async-trait = "0.1"      # For ProxyHttp trait
serde_yaml = "0.9"       # For YAML config in example
serde_urlencoded = "0.7" # For parsing token request body
# pingora-server = { git = "https://github.com/cloudflare/pingora", branch = "main", package = "pingora-server" }
pingora-http = { git = "https://github.com/cloudflare/pingora", branch = "main", package = "pingora-http" }
