[package]
name = "nila-oidc-rp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
description = "A friendly OpenID Connect (OIDC) relying party (client)."
repository.workspace = true
edition = "2024"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest", "rustls-tls"]
curl = ["oauth2/curl"]
reqwest = ["oauth2/reqwest"]
ureq = ["oauth2/ureq"]
native-tls = ["oauth2/native-tls"]
rustls-tls = ["oauth2/rustls-tls"]
accept-rfc3339-timestamps = []
accept-string-booleans = []
nightly = []

[dependencies]
rand = { version = "0.9", default-features = false, features = ["std", "thread_rng"] }
base64.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "std"] }
thiserror.workspace = true
http = "0.2"
itertools = "0.10"
log.workspace = true
oauth2 = { version = "4.2.2", default-features = false }
hmac = "0.12.1"
rsa = { workspace = true, features = ["pkcs1v15"] }
sha2 = { workspace = true, features = ["oid"] }
p256 = "0.11.1"
p384 = "0.11.2"
dyn-clone = "1.0.10"
serde.workspace = true
serde_derive = "1.0"
serde_json.workspace = true
serde_path_to_error = "0.1"
serde_plain = "1.0"
serde_with = "1.13"
serde-value = "0.7"
url = { workspace = true, features = ["serde"] }
subtle = "2.4"

[dev-dependencies]
color-backtrace = "0.5"
env_logger = "0.9"
pretty_assertions = "1.0"
reqwest = { workspace = true, features = ["blocking", "rustls-tls"], default-features = false }
retry = "1.0"
anyhow = "1.0"
